blurry modal fix

--- a/src/scripts/modules/try-mode/react/Try.less
+++ b/src/scripts/modules/try-mode/react/Try.less
@@ -168,6 +168,9 @@
   }
 
   &-wizard {
+    //FIX OF TRANSLATE BLUR BUG IN CHROME
+    -webkit-font-smoothing: subpixel-antialiased;
+    -webkit-transform: translateZ(0) scale(1.0, 1.0);
     &.modal {
       h3{
         font-size: 16px;
